# Synth

./: .gitmodules  CMakeLists.txt  main.cpp
headers/: adsr.hpp  app.hpp  config.hpp  delay.hpp  filter.hpp  notes.hpp  oscillator.hpp  synth.hpp  utils.hpp  voice.hpp  waveform.hpp
src/: adsr.cpp  app.cpp  delay.cpp  filter.cpp  oscillator.cpp  synth.cpp  voice.cpp
